--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "",
-    "password": "",
+    "email": "toror67659@chainds.com",
+    "password": "@astroai@",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
@@ -12,14 +12,14 @@
   "antiInbox": false,
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-  "nickNameBot": "𝙼𝚘𝚌𝚑𝚊 [ - ]",
+  "nickNameBot": "𝗔𝘀𝘁𝗿𝗼 𝗔𝗶 [ - ]",
   "prefix": "-",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
   },
   "adminBot": [
-    "100005954550355"
+    "100074240805149"
   ],
   "whiteListMode": {
     "enable": false,
